# ADK_Gemini_live

./: .gitignore  README.md  pyproject.toml
agent_engine/: cleanup.py  deploy.py  test_text.py
clients/: agent_engine_mic_client.py  audio_gate.py  local_mic_client.py  mic_common.py
local_server/: main.py
local_server/static/: app.js  index.html  pcm-player-processor.js  pcm-recorder-processor.js  style.css
voice_agent/: .env.example  __init__.py  agent.py
