[project]
name = "adk-gemini-live-voice"
version = "0.1.0"
description = "Minimal ADK voice agent: local server, Agent Engine deploy, and voice web client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "pyaudio>=0.2.14; platform_system != 'Windows'",
]

[project.optional-dependencies]
agent-engine = [
    "google-cloud-aiplatform[agent_engines,adk]>=1.112",
    "numpy>=1.26.0",
    "pyaudio>=0.2.14; platform_system != 'Windows'",
]
dev = ["ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_agent"]
